// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticePaymentHistoryMessage buildPaymentHistoryMessage should return the correct BoxContent when userType is 'family' 1`] = `
{
  "backgroundColor": undefined,
  "contents": [
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "align": undefined,
          "color": undefined,
          "decoration": undefined,
          "flex": undefined,
          "margin": undefined,
          "size": undefined,
          "text": "利用者: 家族",
          "type": "text",
          "weight": "bold",
          "wrap": true,
        },
        SeparatorContent {
          "margin": "sm",
          "type": "separator",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "2023/06/02",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "Supermarket",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": "none",
              "size": undefined,
              "text": "2,001 円",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
          ],
          "justifyContent": "flex-start",
          "layout": "horizontal",
          "margin": "xs",
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "2023/06/02",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "Supermarket",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": "none",
              "size": undefined,
              "text": "2,001 円",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
          ],
          "justifyContent": "flex-start",
          "layout": "horizontal",
          "margin": "xs",
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 4,
              "margin": undefined,
              "size": undefined,
              "text": "計",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 2,
              "margin": undefined,
              "size": undefined,
              "text": "4,002 円",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
          ],
          "justifyContent": "flex-start",
          "layout": "horizontal",
          "margin": "sm",
          "type": "box",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
  ],
  "justifyContent": undefined,
  "layout": "vertical",
  "margin": undefined,
  "type": "box",
}
`;

exports[`NoticePaymentHistoryMessage buildPaymentHistoryMessage should return the correct BoxContent when userType is 'himself' 1`] = `
{
  "backgroundColor": undefined,
  "contents": [
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "align": undefined,
          "color": undefined,
          "decoration": undefined,
          "flex": undefined,
          "margin": undefined,
          "size": undefined,
          "text": "利用者: 本人",
          "type": "text",
          "weight": "bold",
          "wrap": true,
        },
        SeparatorContent {
          "margin": "sm",
          "type": "separator",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "2023/06/01",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "Supermarket",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": "none",
              "size": undefined,
              "text": "1,001 円",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
          ],
          "justifyContent": "flex-start",
          "layout": "horizontal",
          "margin": "xs",
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "2023/06/01",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": undefined,
              "size": undefined,
              "text": "Supermarket",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 3,
              "margin": "none",
              "size": undefined,
              "text": "1,001 円",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
          ],
          "justifyContent": "flex-start",
          "layout": "horizontal",
          "margin": "xs",
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 4,
              "margin": undefined,
              "size": undefined,
              "text": "計",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
            {
              "align": "end",
              "color": undefined,
              "decoration": undefined,
              "flex": 2,
              "margin": undefined,
              "size": undefined,
              "text": "2,002 円",
              "type": "text",
              "weight": undefined,
              "wrap": true,
            },
          ],
          "justifyContent": "flex-start",
          "layout": "horizontal",
          "margin": "sm",
          "type": "box",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
  ],
  "justifyContent": undefined,
  "layout": "vertical",
  "margin": undefined,
  "type": "box",
}
`;

exports[`NoticePaymentHistoryMessage getBody should return correct body object 1`] = `
{
  "backgroundColor": undefined,
  "contents": [
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": undefined,
              "margin": undefined,
              "size": undefined,
              "text": "利用者: 本人",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
            SeparatorContent {
              "margin": "sm",
              "type": "separator",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "2023/06/01",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "Supermarket",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": "none",
                  "size": undefined,
                  "text": "1,001 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "xs",
              "type": "box",
            },
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "2023/06/01",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "Supermarket",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": "none",
                  "size": undefined,
                  "text": "1,001 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "xs",
              "type": "box",
            },
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 4,
                  "margin": undefined,
                  "size": undefined,
                  "text": "計",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 2,
                  "margin": undefined,
                  "size": undefined,
                  "text": "2,002 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "sm",
              "type": "box",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
    {
      "backgroundColor": undefined,
      "contents": [],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": "lg",
      "type": "box",
    },
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": undefined,
              "margin": undefined,
              "size": undefined,
              "text": "利用者: 家族",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
            SeparatorContent {
              "margin": "sm",
              "type": "separator",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "2023/06/02",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "Supermarket",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": "none",
                  "size": undefined,
                  "text": "2,001 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "xs",
              "type": "box",
            },
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "2023/06/02",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": undefined,
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": undefined,
                  "size": undefined,
                  "text": "Supermarket",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 3,
                  "margin": "none",
                  "size": undefined,
                  "text": "2,001 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "xs",
              "type": "box",
            },
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 4,
                  "margin": undefined,
                  "size": undefined,
                  "text": "計",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 2,
                  "margin": undefined,
                  "size": undefined,
                  "text": "4,002 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "sm",
              "type": "box",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
    SeparatorContent {
      "margin": "xl",
      "type": "separator",
    },
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "align": "end",
          "color": undefined,
          "decoration": undefined,
          "flex": 4,
          "margin": undefined,
          "size": undefined,
          "text": "合計",
          "type": "text",
          "weight": undefined,
          "wrap": true,
        },
        {
          "align": "end",
          "color": undefined,
          "decoration": undefined,
          "flex": 2,
          "margin": undefined,
          "size": undefined,
          "text": "6,004 円",
          "type": "text",
          "weight": undefined,
          "wrap": true,
        },
      ],
      "justifyContent": "flex-start",
      "layout": "horizontal",
      "margin": "sm",
      "type": "box",
    },
  ],
  "justifyContent": undefined,
  "layout": "vertical",
  "margin": undefined,
  "type": "box",
}
`;

exports[`NoticePaymentHistoryMessage getBody should return correct body object when paymentHistoryList is empty 1`] = `
{
  "backgroundColor": undefined,
  "contents": [
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": undefined,
              "margin": undefined,
              "size": undefined,
              "text": "利用者: 本人",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
            SeparatorContent {
              "margin": "sm",
              "type": "separator",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 4,
                  "margin": undefined,
                  "size": undefined,
                  "text": "計",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 2,
                  "margin": undefined,
                  "size": undefined,
                  "text": "0 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "sm",
              "type": "box",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
    {
      "backgroundColor": undefined,
      "contents": [],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": "lg",
      "type": "box",
    },
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "align": undefined,
              "color": undefined,
              "decoration": undefined,
              "flex": undefined,
              "margin": undefined,
              "size": undefined,
              "text": "利用者: 家族",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
            SeparatorContent {
              "margin": "sm",
              "type": "separator",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
        {
          "backgroundColor": undefined,
          "contents": [
            {
              "backgroundColor": undefined,
              "contents": [
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 4,
                  "margin": undefined,
                  "size": undefined,
                  "text": "計",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
                {
                  "align": "end",
                  "color": undefined,
                  "decoration": undefined,
                  "flex": 2,
                  "margin": undefined,
                  "size": undefined,
                  "text": "0 円",
                  "type": "text",
                  "weight": undefined,
                  "wrap": true,
                },
              ],
              "justifyContent": "flex-start",
              "layout": "horizontal",
              "margin": "sm",
              "type": "box",
            },
          ],
          "justifyContent": undefined,
          "layout": "vertical",
          "margin": undefined,
          "type": "box",
        },
      ],
      "justifyContent": undefined,
      "layout": "vertical",
      "margin": undefined,
      "type": "box",
    },
    SeparatorContent {
      "margin": "xl",
      "type": "separator",
    },
    {
      "backgroundColor": undefined,
      "contents": [
        {
          "align": "end",
          "color": undefined,
          "decoration": undefined,
          "flex": 4,
          "margin": undefined,
          "size": undefined,
          "text": "合計",
          "type": "text",
          "weight": undefined,
          "wrap": true,
        },
        {
          "align": "end",
          "color": undefined,
          "decoration": undefined,
          "flex": 2,
          "margin": undefined,
          "size": undefined,
          "text": "0 円",
          "type": "text",
          "weight": undefined,
          "wrap": true,
        },
      ],
      "justifyContent": "flex-start",
      "layout": "horizontal",
      "margin": "sm",
      "type": "box",
    },
  ],
  "justifyContent": undefined,
  "layout": "vertical",
  "margin": undefined,
  "type": "box",
}
`;

exports[`NoticePaymentHistoryMessage getHeader should return correct header object 1`] = `
{
  "backgroundColor": "#E57F0FFF",
  "contents": [
    {
      "align": "center",
      "color": "#FFFFFFFF",
      "decoration": undefined,
      "flex": undefined,
      "margin": undefined,
      "size": "xl",
      "text": "カード利用のお知らせ",
      "type": "text",
      "weight": "bold",
      "wrap": true,
    },
  ],
  "justifyContent": undefined,
  "layout": "vertical",
  "margin": undefined,
  "type": "box",
}
`;

exports[`NoticePaymentHistoryMessage should return notice payment message 1`] = `
{
  "body": {
    "contents": [
      {
        "contents": [
          {
            "contents": [
              {
                "text": "利用者: 本人",
                "type": "text",
                "weight": "bold",
                "wrap": true,
              },
              {
                "margin": "sm",
                "type": "separator",
              },
            ],
            "layout": "vertical",
            "type": "box",
          },
          {
            "contents": [
              {
                "contents": [
                  {
                    "flex": 3,
                    "text": "2023/06/01",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "flex": 3,
                    "text": "Supermarket",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "align": "end",
                    "flex": 3,
                    "margin": "none",
                    "text": "1,001 円",
                    "type": "text",
                    "wrap": true,
                  },
                ],
                "justifyContent": "flex-start",
                "layout": "horizontal",
                "margin": "xs",
                "type": "box",
              },
              {
                "contents": [
                  {
                    "flex": 3,
                    "text": "2023/06/01",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "flex": 3,
                    "text": "Supermarket",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "align": "end",
                    "flex": 3,
                    "margin": "none",
                    "text": "1,001 円",
                    "type": "text",
                    "wrap": true,
                  },
                ],
                "justifyContent": "flex-start",
                "layout": "horizontal",
                "margin": "xs",
                "type": "box",
              },
              {
                "contents": [
                  {
                    "align": "end",
                    "flex": 4,
                    "text": "計",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "align": "end",
                    "flex": 2,
                    "text": "2,002 円",
                    "type": "text",
                    "wrap": true,
                  },
                ],
                "justifyContent": "flex-start",
                "layout": "horizontal",
                "margin": "sm",
                "type": "box",
              },
            ],
            "layout": "vertical",
            "type": "box",
          },
        ],
        "layout": "vertical",
        "type": "box",
      },
      {
        "contents": [],
        "layout": "vertical",
        "margin": "lg",
        "type": "box",
      },
      {
        "contents": [
          {
            "contents": [
              {
                "text": "利用者: 家族",
                "type": "text",
                "weight": "bold",
                "wrap": true,
              },
              {
                "margin": "sm",
                "type": "separator",
              },
            ],
            "layout": "vertical",
            "type": "box",
          },
          {
            "contents": [
              {
                "contents": [
                  {
                    "flex": 3,
                    "text": "2023/06/02",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "flex": 3,
                    "text": "Supermarket",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "align": "end",
                    "flex": 3,
                    "margin": "none",
                    "text": "2,001 円",
                    "type": "text",
                    "wrap": true,
                  },
                ],
                "justifyContent": "flex-start",
                "layout": "horizontal",
                "margin": "xs",
                "type": "box",
              },
              {
                "contents": [
                  {
                    "flex": 3,
                    "text": "2023/06/02",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "flex": 3,
                    "text": "Supermarket",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "align": "end",
                    "flex": 3,
                    "margin": "none",
                    "text": "2,001 円",
                    "type": "text",
                    "wrap": true,
                  },
                ],
                "justifyContent": "flex-start",
                "layout": "horizontal",
                "margin": "xs",
                "type": "box",
              },
              {
                "contents": [
                  {
                    "align": "end",
                    "flex": 4,
                    "text": "計",
                    "type": "text",
                    "wrap": true,
                  },
                  {
                    "align": "end",
                    "flex": 2,
                    "text": "4,002 円",
                    "type": "text",
                    "wrap": true,
                  },
                ],
                "justifyContent": "flex-start",
                "layout": "horizontal",
                "margin": "sm",
                "type": "box",
              },
            ],
            "layout": "vertical",
            "type": "box",
          },
        ],
        "layout": "vertical",
        "type": "box",
      },
      {
        "margin": "xl",
        "type": "separator",
      },
      {
        "contents": [
          {
            "align": "end",
            "flex": 4,
            "text": "合計",
            "type": "text",
            "wrap": true,
          },
          {
            "align": "end",
            "flex": 2,
            "text": "6,004 円",
            "type": "text",
            "wrap": true,
          },
        ],
        "justifyContent": "flex-start",
        "layout": "horizontal",
        "margin": "sm",
        "type": "box",
      },
    ],
    "layout": "vertical",
    "type": "box",
  },
  "header": {
    "backgroundColor": "#E57F0FFF",
    "contents": [
      {
        "align": "center",
        "color": "#FFFFFFFF",
        "size": "xl",
        "text": "カード利用のお知らせ",
        "type": "text",
        "weight": "bold",
        "wrap": true,
      },
    ],
    "layout": "vertical",
    "type": "box",
  },
  "setting": {
    "DISPLAY_FAMILY": null,
    "DISPLAY_HIMSELF": null,
  },
  "type": "bubble",
}
`;
